--- a/vector-to-raster alignment/readme
+++ b/vector-to-raster alignment/readme
@@ -9,7 +9,7 @@ command: python readShp.py /path/to/shapefile /path/to/georeferenced_map /path/t
 command: python alignment.py /path/to/map /path/to/txt_folder /path/to/output_folder
 
 - rasterize.py: draw the vector data from the alignment script in a black image which is the same size of map.
-command python rasterize.py /path/to/folder /path/to/map
+command python rasterize.py /path/to/folder /path/to/map /path/to/output_map
 
 Data is stored in Google Driver https://www.dropbox.com/sh/iwat21f3ji3jg68/AAAHhzwnPJ44JGLvYVAL65a1a?dl=0
 The map is a USGS topographic historical map covered Bray, CA, circa 2001
